2003-02-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/init.m4 (_AC_AM_CONFIG_HEADER_HOOK): Recompute
	indexes of header files so we create stamp files with
	the right numbers when config.status is run on some headers.
	* tests/stamph2.test: Check for this.
	Reported by Sander Niemeijer.

2003-02-02  Jeremy Nimmer  <jwnimmer@alum.mit.edu>  (tiny change)

	For Debian Bug #39542:
	* automake.texi (Invoking Automake, Optional): Document how
	AC_CONFIG_AUX_DIR interacts with missing files.

2003-01-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Program and Library Variables): Clarify that
	_LIBADD is for libraries and _LDADD for programs.

2003-01-22  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Python): Explain that directory variables start
	with either ${prefix} or ${exec_prefix}, and point to the
	`Installation Directory Variables' section of the Autoconf manual.

2003-01-21  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Dist): Reorder the dist-hook section, and
	move the DIST_SUBDIRS paragraph earlier.

2003-01-19  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/README: New file.

	* automake.texi (Conditional Programs): Show a sample Makefile.am.
	Remind $(EXEEXT) must be appended to configure substitutions.
	Show how Automake conditionals can be used instead.
	* tests/exeext.test (check_PROGRAMS): Make sure EXEEXT is also
	appended to conditionally defined programs.

2003-01-16  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/python.m4 (AM_PATH_PYTHON) <_AM_PYTHON_INTERPRETER_LIST>: Add
	python2.3.

	* m4/python.m4 (AM_PATH_PYTHON): Query distutils for `pythondir'
	or `pyexecdir', for the sake of 64-bit distributions that usually
	use lib64/ instead of lib/.  Fall back to the default directory
	if it doesn't work.
	Suggested by Gwenole Beauchesne.

2003-01-14  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/382:
	* automake.texi (Yacc and Lex): Document `AM_YFLAGS = -d'.
	Explain BUILT_SOURCES is usually needed in this case.