@@ -5358,25 +5358,29 @@ sub scan_autoconf_files
 
     @configure_input_files = sort keys %make_list;
 
-    err_ac "`AM_INIT_AUTOMAKE' must be used"
-      if ! $seen_init_automake;
-
-    if (! $seen_automake_version)
+    if (! $seen_init_automake)
       {
-	if (-f 'aclocal.m4')
+	err_ac "`AM_INIT_AUTOMAKE' must be used";
+      }
+    else
+      {
+	if (! $seen_automake_version)
 	  {
-	    error ($seen_init_automake || $me,
-		   "your implementation of AM_INIT_AUTOMAKE comes from " .
-		   "an\nold Automake version.  You should recreate " .
-		   "aclocal.m4\nwith aclocal and run automake again.\n");
-	  }
-	else
-	  {
-	    error ($seen_init_automake || $me,
-		   "no proper implementation of AM_INIT_AUTOMAKE was " .
-		   "found,\nprobably because aclocal.m4 is missing...\n" .
-		   "You should run aclocal to create this file, then\n" .
-		   "run automake again.\n");
+	    if (-f 'aclocal.m4')
+	      {
+		error ($seen_init_automake,
+		       "your implementation of AM_INIT_AUTOMAKE comes from " .
+		       "an\nold Automake version.  You should recreate " .
+		       "aclocal.m4\nwith aclocal and run automake again.\n");
+	      }
+	    else
+	      {
+		error ($seen_init_automake,
+		       "no proper implementation of AM_INIT_AUTOMAKE was " .
+		       "found,\nprobably because aclocal.m4 is missing...\n" .
+		       "You should run aclocal to create this file, then\n" .
+		       "run automake again.\n");
+	      }
 	  }
       }
 
