@@ -1,3 +1,8 @@
+2003-02-06  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (scan_autoconf_files): Don't complain that
+	AM_INIT_AUTOMAKE comes from an old version if it was not found.
+
 2003-02-04  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* m4/init.m4 (_AC_AM_CONFIG_HEADER_HOOK): Recompute
